syntax = "proto3";

package sec06;

option java_package = "com.example.grpc_playground.models.sec06";
option java_multiple_files = true;

option java_outer_classname = "BankServiceProto"; // Tên lớp Java bên ngoài

import "google/protobuf/empty.proto";

// Định nghĩa message cho yêu cầu
message BalanceCheckRequest {
  int32 account_number = 1;
}

// Định nghĩa message cho phản hồi
message AccountBalance {
  int32 account_number = 1;
  int32 balance = 2;
}

message AllAccountsResponse {
  repeated AccountBalance accounts = 1;
}

message WithdrawRequest {
  int32 account_number = 1;
  int32 amount = 2;
}

message Money {
  int32 amount = 1;
}

// Định nghĩa service
service BankService {

  // API để lấy số dư tài khoản
  rpc GetAccountBalance(BalanceCheckRequest) returns (AccountBalance);

  rpc GetAllAccounts(google.protobuf.Empty) returns (AllAccountsResponse);

  // server streaming
  rpc Withdraw(WithdrawRequest) returns (stream Money);


}